page break inside: avoid

--- a/style.css
+++ b/style.css
@@ -301,7 +301,7 @@
     box-shadow: none !important;
   }
   .hourBlock {
-    break-inside: avoid;
+    
     page-break-inside: avoid;
     width: 100vw !important;
     max-width: 100vw !important;
